overflow issue fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -52,6 +52,7 @@ code {
     border-radius   : 10px;
     align-items     : center;
     /* text-align   : center; */
+    overflow: auto;
     padding         : 18px;
 }
 
